tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:30:33
   |
30 |     let _: WhereClauseA<T, T> = MakeTypeWitness::MAKE;
   |                                 ^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
note: required for `WhereClauseA<T, T>` to implement `MakeTypeWitness`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:5:1
   |
5  | / typewit::simple_type_witness!{
6  | |     enum WhereClauseA<T>
7  | |     where
8  | |     {
9  | |         U8 where T: Copy = T
   | |                     ---- unsatisfied trait bound introduced here
10 | |     }
11 | | }
   | |_^
   = note: this error originates in the macro `$crate::__stw_make_type_witness_impl` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Copy`
   |
29 | fn _a<T: std::marker::Copy>() {
   |        +++++++++++++++++++

error[E0277]: `T` doesn't implement `Debug`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:31:12
   |
31 |     let _: WhereClauseB<T, T> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `T`
   |
note: required by a bound in `WhereClauseB`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:15:14
   |
14 |     enum WhereClauseB<T>
   |          ------------ required by a bound in this enum
15 |     where T: Debug
   |              ^^^^^ required by this bound in `WhereClauseB`
help: consider restricting type parameter `T` with trait `Debug`
   |
29 | fn _a<T: std::fmt::Debug>() {
   |        +++++++++++++++++

error[E0277]: `T` doesn't implement `Debug`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:31:33
   |
31 |     let _: WhereClauseB<T, T> = MakeTypeWitness::MAKE;
   |                                 ^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `T`
   |
note: required for `WhereClauseB<T, T>` to implement `TypeWitnessTypeArg`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:13:1
   |
13 | / typewit::simple_type_witness!{
14 | |     enum WhereClauseB<T>
15 | |     where T: Debug
   | |              ----- unsatisfied trait bound introduced here
...  |
19 | | }
   | |_^
note: required by a bound in `MAKE`
  --> src/type_witness_traits.rs
   |
   | pub trait MakeTypeWitness: TypeWitnessTypeArg {
   |                            ^^^^^^^^^^^^^^^^^^ required by this bound in `MakeTypeWitness::MAKE`
   |     /// A constant with the type witness
   |     const MAKE: Self;
   |           ---- required by a bound in this associated constant
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Debug`
   |
29 | fn _a<T: std::fmt::Debug>() {
   |        +++++++++++++++++

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:31:33
   |
31 |     let _: WhereClauseB<T, T> = MakeTypeWitness::MAKE;
   |                                 ^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
note: required for `WhereClauseB<T, T>` to implement `MakeTypeWitness`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:13:1
   |
13 | / typewit::simple_type_witness!{
14 | |     enum WhereClauseB<T>
15 | |     where T: Debug
16 | |     {
17 | |         U8 where T: Copy, = T
   | |                     ---- unsatisfied trait bound introduced here
18 | |     }
19 | | }
   | |_^
   = note: this error originates in the macro `$crate::__stw_make_type_witness_impl` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Copy`
   |
29 | fn _a<T: std::marker::Copy>() {
   |        +++++++++++++++++++

error[E0277]: `T` doesn't implement `Debug`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:32:33
   |
32 |     let _: WhereClauseC<T, T> = MakeTypeWitness::MAKE;
   |                                 ^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `T`
   |
note: required for `WhereClauseC<T, T>` to implement `TypeWitnessTypeArg`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:21:1
   |
21 | / typewit::simple_type_witness!{
22 | |     enum WhereClauseC<T>
23 | |     where T: Debug,
   | |              ----- unsatisfied trait bound introduced here
...  |
27 | | }
   | |_^
note: required by a bound in `MAKE`
  --> src/type_witness_traits.rs
   |
   | pub trait MakeTypeWitness: TypeWitnessTypeArg {
   |                            ^^^^^^^^^^^^^^^^^^ required by this bound in `MakeTypeWitness::MAKE`
   |     /// A constant with the type witness
   |     const MAKE: Self;
   |           ---- required by a bound in this associated constant
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Debug`
   |
29 | fn _a<T: std::fmt::Debug>() {
   |        +++++++++++++++++

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:32:33
   |
32 |     let _: WhereClauseC<T, T> = MakeTypeWitness::MAKE;
   |                                 ^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
note: required for `WhereClauseC<T, T>` to implement `MakeTypeWitness`
  --> tests/misc_tests/stw_ui_tests/stw_macro_where_clause_angle_brackets-err.rs:21:1
   |
21 | / typewit::simple_type_witness!{
22 | |     enum WhereClauseC<T>
23 | |     where T: Debug,
24 | |     {
25 | |         U8 where T: Copy = T
   | |                     ---- unsatisfied trait bound introduced here
26 | |     }
27 | | }
   | |_^
   = note: this error originates in the macro `$crate::__stw_make_type_witness_impl` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Copy`
   |
29 | fn _a<T: std::marker::Copy>() {
   |        +++++++++++++++++++
